kubernetes/infrastructure/controllers/external-secrets/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  labels:
    app.kubernetes.io/name: external-secrets
    app.kubernetes.io/managed-by: flux
